--- a/UniProj/Pages/Workers/Delete.cshtml
+++ b/UniProj/Pages/Workers/Delete.cshtml
@@ -13,10 +13,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Worker.IdPosition)
+            @Html.DisplayNameFor(model => model.Worker.Position)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Worker.IdPosition)
+            @Html.DisplayFor(model => model.Worker.Position.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Worker.Name)
