--- a/UniProj/Pages/Workers/Edit.cshtml
+++ b/UniProj/Pages/Workers/Edit.cshtml
@@ -15,14 +15,15 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Worker.Id" />
             <div class="form-group">
-                <label asp-for="Worker.IdPosition" class="control-label"></label>
-                <div>@Html.DisplayFor(model => model.Worker.Id)</div>
+                <label asp-for="Worker.Position" class="control-label"></label>
+                <select asp-for="Worker.IdPosition" class="form-control" 
+                        asp-items="@Model.PositionNameSL"></select>
+                <span asp-validation-for="Worker.IdPosition" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Worker.Position" class="control-label"></label>
-                <select asp-for="Worker.Id" class="form-control" 
-                        asp-items="@Model.PositionNameSL"></select>
-                <span asp-validation-for="Worker.Id" class="text-danger"></span>
+                <label asp-for="Worker.Name" class="control-label"></label>
+                <input asp-for="Worker.Name" class="form-control" />
+                <span asp-validation-for="Worker.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Worker.LastName" class="control-label"></label>
